--- a/client/index.html
+++ b/client/index.html
@@ -6,14 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Express Workshop</title>
-    <link rel="stylesheet" href="/css/master.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="lib/semantic/dist/semantic.min.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="index.css" media="screen" title="no title" charset="utf-8">
   </head>
 
   <body>
-    <h1 id="logo" class="ui header">Express Workshop</h1>
-    <p id="description" class="ui segment">
-      Tulisan di sini. 😀
-    </p>
+
+    <div class="ui container">
+      <h1 id="logo" class="ui orange header">Express Workshop</h1>
+      <p id="description" class="ui blue segment">
+        Tulisan di sini. 😀
+      </p>
+    </div>
 
   </body>
 
