--- a/client/index.html
+++ b/client/index.html
@@ -21,6 +21,7 @@
 
   </body>
 
-  <script src="./index.js" charset="utf-8"></script>
+  <script src="lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
+  <script src="index.js" charset="utf-8"></script>
 
 </html>
