--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Express Workshop</title>
     <link rel="stylesheet" href="lib/semantic/dist/semantic.min.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="index.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="styles/index.css" media="screen" title="no title" charset="utf-8">
   </head>
 
   <body>
@@ -22,6 +22,6 @@
   </body>
 
   <script src="lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
-  <script src="index.js" charset="utf-8"></script>
+  <script src="scripts/index.js" charset="utf-8"></script>
 
 </html>
