Bower: EJS and Handlebars

--- a/client/index.html
+++ b/client/index.html
@@ -22,6 +22,8 @@
   </body>
 
   <script src="lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
+  <script src="lib/ejs/ejs.min.js" charset="utf-8"></script>
+  <script src="lib/handlebars/handlebars.min.js" charset="utf-8"></script>
   <script src="scripts/index.js" charset="utf-8"></script>
 
 </html>
