--- a/client/index.html
+++ b/client/index.html
@@ -14,50 +14,60 @@
 
     <div class="ui container">
 
-      <div class="ui secondary menu">
-        <a class="ui item" href="/">Home</a>
-        <a class="ui item" href="/admin">Admin</a>
-        <div class="right menu">
-          <div class="item">
-            <div class="ui icon input">
-              <input type="text" placeholder="Search...">
-              <i class="search link icon"></i>
+      <!-- Menu -->
+      <div id="menu" class="ui">
+        <script id="menu-panel-template" type="text/x-handlebars-template">
+          <div class="ui secondary menu">
+            <a class="ui item" href="/">Home</a>
+            <div class="right menu">
+              <div class="item">
+                <div class="ui icon input">
+                  <input id="search" type="text" placeholder="Search...">
+                  <i class="search link icon"></i>
+                </div>
+              </div>
             </div>
           </div>
-          <a class="ui item">Sign up</a>
-          <a class="ui item">Sign in</a>
-        </div>
+        </script>
       </div>
 
-      <h1 id="logo" class="ui orange header">Express Workshop</h1>
-      <p id="description" class="ui blue segment">
-        An end user experience. 😀
-      </p>
+      <!-- Header -->
+      <header>
+        <h1 id="logo" class="ui orange header">Express Workshop (Admin Mode)</h1>
+        <h2 id="description" class="ui blue segment">
+          An administration mode.
+        </2>
+      </header>
 
+      <!-- Book table -->
       <table id="books-list-table" class="ui celled table">
         <thead id="books-list-header">
           <tr>
             <th>ISBN</th>
             <th>Title</th>
             <th>Price</th>
+            <th>Update</th>
+            <th>Remove</th>
           </tr>
         </thead>
+        <!-- Books list using template -->
+        <script id="books-list-template" type="text/x-handlebars-template">
+          <tbody id="books-list-content">
+            {{#each this}}
+            <tr>
+              <td class="three wide">{{isbn}}</td>
+              <td>{{name}}</td>
+              <td class="two wide">${{price}}</td>
+              <td class="one wide selectable warning"><a data-isbn="{{isbn}}">Update</a></td>
+              <td class="one wide selectable negative"><a data-isbn="{{isbn}}">Remove</a></td>
+            </tr>
+            {{/each}}
+          </tbody>
+        </script>
       </table>
     </div>
 
   </body>
-
-  <script id="books-list-template" type="text/x-handlebars-template">
-    <tbody id="books-list-content">
-      {{#each this}}
-      <tr>
-        <td class="three wide">{{isbn}}</td>
-        <td>{{name}}</td>
-        <td class="two wide">${{price}}</td>
-      </tr>
-      {{/each}}
-    </tbody>
-  </script>
 
   <script src="/lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
   <script src="/lib/semantic/dist/semantic.min.js" charset="utf-8"></script>
