--- a/client/index.html
+++ b/client/index.html
@@ -43,27 +43,27 @@
       <table id="books-list-table" class="ui celled table">
         <thead id="books-list-header">
           <tr>
-            <th>ISBN</th>
+            <th class="three wide">ISBN</th>
             <th>Title</th>
-            <th>Price</th>
-            <th>Update</th>
-            <th>Remove</th>
+            <th class="two wide">Price</th>
+            <th class="one wide">Update</th>
+            <th class="one wide">Remove</th>
           </tr>
         </thead>
         <!-- Books list using template -->
-        <script id="books-list-template" type="text/x-handlebars-template">
-          <tbody id="books-list-content">
-            {{#each this}}
-            <tr>
-              <td class="three wide">{{isbn}}</td>
-              <td>{{name}}</td>
-              <td class="two wide">${{price}}</td>
-              <td class="one wide selectable warning"><a data-isbn="{{isbn}}">Update</a></td>
-              <td class="one wide selectable negative"><a data-isbn="{{isbn}}">Remove</a></td>
-            </tr>
-            {{/each}}
-          </tbody>
-        </script>
+        <tbody id="books-list-content">
+          <script id="books-list-template" type="text/x-handlebars-template">
+          {{#each this}}
+          <tr>
+            <td class="three wide">{{isbn}}</td>
+            <td>{{name}}</td>
+            <td class="two wide">${{price}}</td>
+            <td class="one wide selectable warning"><a data-isbn="{{isbn}}">Update</a></td>
+            <td class="one wide selectable negative"><a data-isbn="{{isbn}}">Remove</a></td>
+          </tr>
+          {{/each}}
+          </script>
+        </tbody>
       </table>
     </div>
 
