Proper JWT token creation and handling
JWT only contain user id

--- a/client/index.html
+++ b/client/index.html
@@ -19,6 +19,8 @@
         <script id="menu-panel-template" type="text/x-handlebars-template">
           <div class="ui secondary menu">
             <a class="ui item" href="/">Home</a>
+            <a class="ui item" href="/signup.html">Sign Up</a>
+            <a class="ui item" href="/signin.html">Sign In</a>
             <div id="search" class="right menu">
               <div class="item">
                 <div class="ui icon input">
