--- a/client/signin.html
+++ b/client/signin.html
@@ -60,7 +60,9 @@
             }
           })
           .done((data) => {
-            console.log(data)
+            console.log('data:', data)
+            localStorage.setItem('token', data.token)
+            console.log('token:', localStorage.getItem('token'))
               // window.location = '/'
           })
           .fail((err) => {
