--- a/client/signup.html
+++ b/client/signup.html
@@ -19,7 +19,7 @@
           <h2 class="ui green image header">
             <div class="content">Sign up for a new account</div>
           </h2>
-          <form id="signupForm" role="form" name="form" novalidate="" action="http://localhost:3000/api/auth/signup" method="post" class="ui large form">
+          <form id="signupForm" role="form" name="form" novalidate="" action="http://localhost:3000/auth/signup" method="post" class="ui large form">
             <div class="ui segment">
               <div class="field">
                 <div class="ui left icon input"><i class="user icon"></i>
