--- a/client/index.html
+++ b/client/index.html
@@ -71,8 +71,8 @@
             <td class="three wide">{{isbn}}</td>
             <td>{{name}}</td>
             <td class="two wide">${{price}}</td>
-            <td class="one wide selectable warning"><a data-update="{{isbn}}">Update</a></td>
-            <td class="one wide selectable negative"><a data-remove="{{isbn}}">Remove</a></td>
+            <td class="one wide selectable warning update" data-update="{{isbn}}"><a>Update</a></td>
+            <td class="one wide selectable negative remove" data-remove="{{isbn}}"><a>Remove</a></td>
           </tr>
           {{/each}}
           </script>
