Separate common Auth with other scripts
Refine API auth/signout
Remove Books Action logic for public view

--- a/client/profile.html
+++ b/client/profile.html
@@ -21,6 +21,8 @@
   <script src="/lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
   <script src="/lib/semantic/dist/semantic.min.js" charset="utf-8"></script>
   <script src="/lib/handlebars/handlebars.min.js" charset="utf-8"></script>
+  <script src="/scripts/common.js" charset="utf-8"></script>
+  <script src="/scripts/profile.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     $(document).ready(function() {
