--- a/client/admin.html
+++ b/client/admin.html
@@ -115,6 +115,7 @@
   <script src="/lib/semantic/dist/semantic.min.js" charset="utf-8"></script>
   <script src="/lib/handlebars/handlebars.min.js" charset="utf-8"></script>
   <script src="lib/jwt-decode/build/jwt-decode.min.js" charset="utf-8"></script>
+  <script src="/scripts/common.js" charset="utf-8"></script>
   <script src="/scripts/admin.js" charset="utf-8"></script>
 
 </html>
