--- a/client/index.html
+++ b/client/index.html
@@ -83,6 +83,7 @@
   <script src="/lib/semantic/dist/semantic.min.js" charset="utf-8"></script>
   <script src="/lib/handlebars/handlebars.min.js" charset="utf-8"></script>
   <script src="lib/jwt-decode/build/jwt-decode.min.js" charset="utf-8"></script>
+  <script src="/scripts/common.js" charset="utf-8"></script>
   <script src="/scripts/index.js" charset="utf-8"></script>
 
 </html>
