--- a/client/signin.html
+++ b/client/signin.html
@@ -47,6 +47,7 @@
   <script src="/lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
   <script src="/lib/semantic/dist/semantic.min.js" charset="utf-8"></script>
   <script src="/lib/handlebars/handlebars.min.js" charset="utf-8"></script>
+  <script src="/scripts/common.js" charset="utf-8"></script>
 
   <script type="text/javascript">
     $(document).ready(function() {
@@ -60,10 +61,7 @@
             }
           })
           .done((data) => {
-            console.log('data:', data)
-            localStorage.setItem('token', data.token)
-            console.log('token:', localStorage.getItem('token'))
-            window.location = '/'
+            Auth.authenticateUser(data)
           })
           .fail((err) => {
             console.log('Error:', err)
