Books Action: buttons for seed and delete all

--- a/client/admin.html
+++ b/client/admin.html
@@ -50,6 +50,8 @@
         <h1 id="logo" class="ui orange header">Express Workshop</h1>
         <h2 id="description" class="ui blue segment">
           <button id="book-add-button" type="button" name="add" class="ui blue button">Add new book</button>
+          <button id="book-seed-button" type="button" name="seed" class="ui green button">Seed some books</button>
+          <button id="book-delete-all-button" type="button" name="deleteAll" class="ui red button">Delete all books</button>
         </2>
       </header>
 
@@ -69,7 +71,7 @@
                   <label>Price</label><input type="number" name="price" maxlength="10" placeholder="99">
                 </div>
               </div>
-              <input class="ui green button" type="submit" name="addNew" value="Add New">
+              <input class="ui orange button" type="submit" name="addNew" value="Add New">
               <input class="ui purple button" type="button" name="addCancel" value="Cancel">
             </form>
           </div>
