Conform with server data seeder
Express Workshop => Workshop JS
New seed lot button

--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Express Workshop</title>
+    <title>Workshop JS</title>
     <link rel="stylesheet" href="/lib/semantic/dist/semantic.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/styles/index.css" media="screen" title="no title" charset="utf-8">
   </head>
@@ -48,7 +48,7 @@
 
       <!-- Header -->
       <header>
-        <h1 id="logo" class="ui orange header">Express Workshop</h1>
+        <h1 id="logo" class="ui orange header">Workshop JS</h1>
       </header>
 
       <!-- Book table -->
