--- a/client/admin.html
+++ b/client/admin.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Express Workshop</title>
+    <title>Workshop JS</title>
     <link rel="stylesheet" href="/lib/semantic/dist/semantic.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/styles/index.css" media="screen" title="no title" charset="utf-8">
   </head>
@@ -47,10 +47,11 @@
 
       <!-- Header -->
       <header>
-        <h1 id="logo" class="ui orange header">Express Workshop</h1>
+        <h1 id="logo" class="ui orange header">Workshop JS</h1>
         <h2 id="description" class="ui blue segment">
           <button id="book-add-button" type="button" name="add" class="ui blue button">Add new book</button>
           <button id="book-seed-button" type="button" name="seed" class="ui green button">Seed some books</button>
+          <button id="book-seed-lot-button" type="button" name="seedlot" class="ui teal button">Seed a lot of books</button>
           <button id="book-delete-all-button" type="button" name="deleteAll" class="ui red button">Delete all books</button>
         </2>
       </header>
