--- a/client/profile.html
+++ b/client/profile.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Express Workshop - Profile</title>
+    <title>Workshop JS - Profile</title>
     <link rel="stylesheet" href="/lib/semantic/dist/semantic.min.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="/styles/index.css" media="screen" title="no title" charset="utf-8">
   </head>
