Use SweetAlert for confirmation on deletion
When delete one book and delete all books

--- a/client-jquery/admin.html
+++ b/client-jquery/admin.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Workshop JS</title>
-    <link rel="stylesheet" href="/lib/semantic/dist/semantic.min.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="/styles/index.css" media="screen" title="no title" charset="utf-8">
+    <title>Super Workshop JS</title>
+    <link rel="stylesheet" href="/lib/semantic/dist/semantic.min.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="/lib/sweetalert/dist/sweetalert.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="/styles/index.css" media="screen" charset="utf-8">
   </head>
 
   <body>
@@ -129,8 +130,9 @@
 
   <script src="/lib/jquery/dist/jquery.min.js" charset="utf-8"></script>
   <script src="/lib/semantic/dist/semantic.min.js" charset="utf-8"></script>
+  <script src="/lib/sweetalert/dist/sweetalert.min.js" charset="utf-8"></script>
   <script src="/lib/handlebars/handlebars.min.js" charset="utf-8"></script>
-  <script src="lib/jwt-decode/build/jwt-decode.min.js" charset="utf-8"></script>
+  <script src="/lib/jwt-decode/build/jwt-decode.min.js" charset="utf-8"></script>
   <script src="/scripts/common.js" charset="utf-8"></script>
   <script src="/scripts/admin.js" charset="utf-8"></script>
 
